# margin

./: .gitignore  AGENTS.md  CHANGELOG.md  Caddyfile  Dockerfile  Makefile  README.md  electron.vite.config.ts  package-lock.json  package.json  pyproject.toml  rxconfig.py  skills-lock.json  tsconfig.json  vitest.config.ts
.agents/skills/changelog/: SKILL.md
.agents/skills/commit/: SKILL.md
.agents/skills/create-web/: CHANGELOG.md  README.md  SKILL.md
.agents/skills/release/: SKILL.md
.claude/skills/: create-web
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 95f39bc57cd8_create_auth_tables.py
config/: deploy.yml
docs/: deployment.md  development.md  shortcuts.md
example/: .thumbnail  Margin.dc.html
margin/: api.py  auth.py  db.py  mailer.py  margin.py  models.py  seed.py  state.py
margin/pages/: __init__.py  index.py  sign_in.py  verify.py
scripts/: copy-data.sh  parity-check.ts
scripts/promo/: README.md  make-video.sh  record.mjs  setup-sandbox.sh
src/main/: db.ts  index.ts  ingest-worker.ts  paths.ts  protocol.ts
src/main/ipc/: chat.ts  documents.ts  ingest.ts  library.ts  settings.ts
src/main/services/: ai.test.ts  ai.ts  aiCore.test.ts  aiCore.ts  chat.ts  chatCore.test.ts  chatCore.ts  chatMigration.test.ts  chatMigration.ts  commands.ts  executableSettings.ts  executableSettingsCore.test.ts  executableSettingsCore.ts  (+12 more)
src/preload/: index.ts
src/renderer/: index.html
src/shared/: constants.ts  ipc.ts  models.ts
tests/: conftest.py  test_auth.py
(+66 files in other folders)
